# apex-vetclaim

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  server.py
.devcontainer/: devcontainer.json
src/apex_vetclaim/: __init__.py  agent.py  bot.py  instrumentation.py  prompt.py  server.py
src/apex_vetclaim/evals/: accuracy.py  citation_integrity.py  fidelity.py  fixtures.py  run_evals.py  safety.py  specificity.py
src/apex_vetclaim/evals/reports/: eval_run_20260627_195350.json
src/apex_vetclaim/tools/: check_rating_schedule.py  draft_personal_statement.py  evidence_gap_check.py  review_past_decisions.py  review_secondary_conditions.py  search_va_precedent.py
