[project]
name = "apex-vetclaim"
version = "0.1.0"
description = "Slack agent for veteran disability rating triage"
requires-python = ">=3.12"
dependencies = [
  "slack-bolt>=1.21.0",
  "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apex_vetclaim"]
