[project]
name = "apex-vetclaim"
version = "0.1.0"
description = "Slack agent for veteran disability rating triage"
requires-python = ">=3.12,<3.14"
dependencies = [
  "slack-bolt>=1.21.0",
  "python-dotenv>=1.0.0",
  "google-adk>=0.5.0",
  "google-genai>=0.8.0",
  "google-cloud-aiplatform>=1.71.0",
  "arize-phoenix>=8.0.0",
  "arize-phoenix-evals>=0.18.0",
  "openinference-instrumentation-google-genai>=0.1.0",
  "openinference-instrumentation-google-adk>=0.1.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apex_vetclaim"]
